女王節活動頁 - 更新內容
1.步驟圖與說明更新
2.date-04.html-更新活動內容

--- a/iiot/taoyuang1000/queen/date-04.html
+++ b/iiot/taoyuang1000/queen/date-04.html
@@ -117,7 +117,7 @@
                         <table class="table-style pc-show" border="0" cellpadding="0" cellspacing="0">
                             <tr>
                                 <th width="50%">消費滿兩千兌換兩百元</th>
-                                <th>來店禮兌換</th>
+                                <th>停車優惠</th>
                             </tr>
                             <tr>
                                 <td class="info">
@@ -126,7 +126,7 @@
                                             <p>於<a href="https://liff.line.me/1645278921-kWRPP32q/?accountId=497jygbl" target="_blank">桃園市民卡LINE官方帳號</a>完成註冊。</p>
                                         </li>
                                         <li>
-                                            <p>11F 客服中心出示當日消費滿2,000元發票（當日累積）及市民卡LINE「註冊/登錄」頁面 即可掃描現場 QRCODE 領取百貨禮券200元（限量200份，每人限兌換一份，送完為止）。</p>
+                                            <p>11F 客服中心出示當日消費滿2,000元發票（當日累積）及市民卡LINE「註冊/登錄」頁面 即可掃描現場 QRCODE 領取百貨商品券200元（限量200份，每人限兌換一份，送完為止）。</p>
                                         </li>
                                     </ul>
                                     <p class="text-remark">※ 兌換按鈕請交由工作人員進行點選，請勿自行操作，以免喪失權益。</p>
@@ -157,14 +157,14 @@
                                                     target="_blank">桃園市民卡LINE官方帳號</a>完成註冊。</p>
                                         </li>
                                         <li>
-                                            <p>11F 客服中心出示當日消費滿2,000元發票（當日累積）及市民卡LINE「註冊/登錄」頁面 即可掃描現場 QRCODE 領取百貨禮券200元（限量200份，每人限兌換一份，送完為止）。</p>
+                                            <p>11F 客服中心出示當日消費滿2,000元發票（當日累積）及市民卡LINE「註冊/登錄」頁面 即可掃描現場 QRCODE 領取百貨商品券200元（限量200份，每人限兌換一份，送完為止）。</p>
                                         </li>
                                     </ul>
                                     <p class="text-remark">※ 兌換按鈕請交由工作人員進行點選，請勿自行操作，以免喪失權益。</p>
                                 </td>
                             </tr>
                             <tr>
-                                <th>來店禮兌換</th>
+                                <th>停車優惠</th>
                             </tr>
                             <tr>
                                 <td class="info">
