--- a/iiot/taoyuang1000/queen/index.html
+++ b/iiot/taoyuang1000/queen/index.html
@@ -149,8 +149,7 @@
                                 <h5>活動期間</h5>
                                 <p>111年4月18日（一）至6月5日（日）23:59止，逾時恕不受理。</p>
                                 <h5>活動簡介</h5>
-                                <p>歡慶母親節，市民卡要讓你買得優惠、買得愉快，盡情寵愛自己！
-                                回饋總價值高達720萬的悠遊卡、一卡通MONEY、第一銀行「消費滿千送百」活動，只要於4/18－5/4至市民卡官方LINE註冊、登錄，即有機會抽中回饋名額（共計72,000名）。百貨接力送好禮，6/5前至指定百貨出示市民卡官方LINE，兌換品牌折扣或來店禮，憑消費2,000元發票，再送200元百貨禮券！</p>
+                                <p>悠遊卡、一卡通MONEY、第一銀行「消費滿千送百」活動，好評再延長、福利再加碼！回饋名額不用抽，4/18－6/5至市民卡官方LINE完成註冊，即可登記滿千送百回饋名額（共計72,000名，先搶先贏）。百貨接力送好禮，6/5前至指定百貨出示市民卡官方LINE，兌換品牌折扣或來店禮，憑消費2,000元發票，再送200元百貨禮券！</p>
                             </div>
                         </div>
                     </div>
@@ -159,10 +158,10 @@
                             <span class="bg-pink">成為卡好女王小攻略</span>
                         </h3>
                         <div class="pc-show">
-                            <img src="images/banner-raiders.png" title="成為卡好女王小攻略" width="100%">
+                            <img src="images/banner-raiders-0506.png" title="成為卡好女王小攻略" width="100%">
                         </div>
                         <div class="mob-show">
-                            <img src="images/banner-raiders-mob.png" title="成為卡好女王小攻略" width="100%">
+                            <img src="images/banner-raiders-mob-0506.png" title="成為卡好女王小攻略" width="100%">
                         </div>
                     </div>
                     <div class="card">
@@ -228,12 +227,12 @@
                             <ul class="list">
                                 <li>
                                     <p>
-                                        4月18日（一）10:00 至5月4日（三）23:59
-                                        至<a href="https://liff.line.me/1645278921-kWRPP32q/?accountId=497jygbl" target="_blank">桃園市民卡LINE官方帳號</a>完成註冊及<a href="https://taoyuan1000.tycg.gov.tw/app/act_card_register" target="_blank">活動登錄</a>（請點選文字前往相關頁面）。
+                                        6月5日（三）前至<a href="https://liff.line.me/1645278921-kWRPP32q/?accountId=497jygbl" target="_blank">桃園市民卡LINE官方帳號</a>完成註冊及<a href="https://taoyuan1000.tycg.gov.tw/app/act_card_register" target="_blank">活動登記</a>（請點選文字前往相關頁面），即可獲得回饋名額。
                                     </p>
+                                    <p class="text-remark">※ 若您所選的支付工具名額截止，將無法成功登記。</p>
                                 </li>
                                 <li>
-                                    <p>公布名單後，即可於6月5日前使用桃園市民卡指定支付工具（悠遊卡、一卡通MONEY、第一銀行）進行消費，消費滿千元即會於七月底前獲得百元回饋金。</p>
+                                    <p>6月5日（三）前使用桃園市民卡指定支付工具（悠遊卡、一卡通MONEY、第一銀行）進行消費，消費滿千元即會於七月底前獲得百元回饋金。</p>
                                 </li>
                             </ul>
                             <div class="step-box">
@@ -251,7 +250,7 @@
                                         <img src="images/step3.png" alt="綁定市民卡片">
                                     </li>
                                     <li>
-                                        <img src="images/step4.png" alt="抽滿千送百">
+                                        <img src="images/step4-0506.png" alt="抽滿千送百">
                                     </li>
                                 </ul>
                             </div>
@@ -262,9 +261,8 @@
                                     <th width="33%">消費期間</th>
                                     <th>消費回饋</th>
                                 </tr>
-                                <td align="center">4月18日（一）10:00<br>
-                                至 5月4日（三）23:59</td>
-                                <td align="center">5月6日（五）<br>至 6月5日（日）</td>
+                                <td align="center">4月18日（一）10:00<br>至 5月4日（三）23:59</td>
+                                <td align="center">5月6日（五）00:00<br>至 6月5日（日）23:59</td>
                                 <td align="center">七月底前</td>
                                 </tr>
                             </table>
@@ -383,7 +381,7 @@
                                     <p>註冊資料無法重複填寫及任意更改，請務必確實填寫，若資料錯誤或不符以致系統無法驗證身分，將影響您的活動資格。</p>
                                 </li>
                                 <li>
-                                    <p>獎項將於公告時間由主辦單位以電腦隨機方式抽出幸運得獎者；中獎名單將於抽出5個工作天後公告於桃園市民卡主題網站與活動網站。請中獎人務必妥善保管中獎推播訊息，並依中獎公告及通知流程進行後續兌獎。</p>
+                                    <p>三大支付「滿千送百」活動，將依登記完成順序提供回饋名額（共計72,000名），登記成功即可使用指定支付工具前往消費，若您所選的支付工具名額截止，將無法成功登記。</p>
                                 </li>
                                 <li>
                                     <p>百貨滿兩千送兩百禮券為「現金禮券」或「商品禮券」，類別將依各家業者提供為主，如使用「商品禮券」購物，等同兌換等值的商品而非購買，將無法取得營業人開立之統一發票。</p>
