女王節活動 - 調整mob跑版問題

--- a/iiot/taoyuang1000/queen/index.html
+++ b/iiot/taoyuang1000/queen/index.html
@@ -180,13 +180,13 @@
                                 <a class="store-photo" href="date-02.html" target="_blank">
                                     <img src="images/img_store_02.png" alt="Global Mall 環球購物中心 A19">
                                 </a>
-                                <p>Global Mall 環球購物中心 A19</p>
+                                <p>Global Mall <span>環球購物中心 A19</span></p>
                             </li>
                             <li>
                                 <a class="store-photo" href="date-03.html" target="_blank">
                                     <img src="images/img_store_03.png" alt="Global Mall環球購物中心A8">
                                 </a>
-                                <p>Global Mall 環球購物中心 A8</p>
+                                <p>Global Mall <span>環球購物中心 A8</span></p>
                             </li>
                             <li>
                                 <a class="store-photo" href="date-04.html" target="_blank">
