女王節活動 - 更新description & 步驟圖 + 活動內容

--- a/iiot/taoyuang1000/queen/date-04.html
+++ b/iiot/taoyuang1000/queen/date-04.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>【遠東百貨桃園店】 桃園市民卡－卡好女王節</title>
-    <meta name='description'content="歡慶母親節，桃園市民卡結合三大支付工具推出「消費滿千送百」超值回饋，活動期間至官方LINE帳號註冊、登錄，即有機會抽中回饋名額。卡好女王節就是要讓你買得優惠、買得愉快，做自已的女王，盡情寵愛自己！" />
+    <meta name='description'content="悠遊卡、一卡通MONEY、第一銀行「消費滿千送百」活動，好評再延長、福利再加碼！回饋名額不用抽（共計72,000名，先搶先贏）。百貨接力送好禮，憑消費2,000元發票，再送200元百貨禮券！" />
     <meta name='keywords' content="數位桃園, 數位振興, 聯合台灣大車隊,桃園市民, TTPUSH,乘車套票, 抽獎" />
     <meta property="og:image" content="images/share-pic-queen.jpg" />
     <meta property="og:title" content="【遠東百貨桃園店】 桃園市民卡－卡好女王節" />
     <meta property="og:url" content="https://taoyuan1000.tycg.gov.tw" />
-    <meta property="og:description" content="歡慶母親節，桃園市民卡結合三大支付工具推出「消費滿千送百」超值回饋，活動期間至官方LINE帳號註冊、登錄，即有機會抽中回饋名額。卡好女王節就是要讓你買得優惠、買得愉快，做自已的女王，盡情寵愛自己！" />
+    <meta property="og:description" content="悠遊卡、一卡通MONEY、第一銀行「消費滿千送百」活動，好評再延長、福利再加碼！回饋名額不用抽（共計72,000名，先搶先贏）。百貨接力送好禮，憑消費2,000元發票，再送200元百貨禮券！" />
     <meta property="og:type" content="website" />
     <link rel="apple-touch-icon" sizes="57x57" href="https://taoyuan1000.tycg.gov.tw/images/icons/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="https://taoyuan1000.tycg.gov.tw/images/icons/apple-icon-60x60.png">
