--- a/iiot/taoyuang1000/queen/date-05.html
+++ b/iiot/taoyuang1000/queen/date-05.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>【新光三越桃園站前店】 桃園市民卡－卡好女王節</title>
-    <meta name='description'content="歡慶母親節，桃園市民卡結合三大支付工具推出「消費滿千送百」超值回饋，活動期間至官方LINE帳號註冊、登錄，即有機會抽中回饋名額。卡好女王節就是要讓你買得優惠、買得愉快，做自已的女王，盡情寵愛自己！" />
+    <meta name='description'content="悠遊卡、一卡通MONEY、第一銀行「消費滿千送百」活動，好評再延長、福利再加碼！回饋名額不用抽（共計72,000名，先搶先贏）。百貨接力送好禮，憑消費2,000元發票，再送200元百貨禮券！" />
     <meta name='keywords' content="數位桃園, 數位振興, 聯合台灣大車隊,桃園市民, TTPUSH,乘車套票, 抽獎" />
     <meta property="og:image" content="images/share-pic-queen.jpg" />
     <meta property="og:title" content="【新光三越桃園站前店】 桃園市民卡－卡好女王節" />
     <meta property="og:url" content="https://taoyuan1000.tycg.gov.tw" />
-    <meta property="og:description" content="歡慶母親節，桃園市民卡結合三大支付工具推出「消費滿千送百」超值回饋，活動期間至官方LINE帳號註冊、登錄，即有機會抽中回饋名額。卡好女王節就是要讓你買得優惠、買得愉快，做自已的女王，盡情寵愛自己！" />
+    <meta property="og:description" content="悠遊卡、一卡通MONEY、第一銀行「消費滿千送百」活動，好評再延長、福利再加碼！回饋名額不用抽（共計72,000名，先搶先贏）。百貨接力送好禮，憑消費2,000元發票，再送200元百貨禮券！" />
     <meta property="og:type" content="website" />
     <link rel="apple-touch-icon" sizes="57x57" href="https://taoyuan1000.tycg.gov.tw/images/icons/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="https://taoyuan1000.tycg.gov.tw/images/icons/apple-icon-60x60.png">
@@ -103,7 +103,7 @@
                     <div class="card">
                          <div class="main-introductio">
                             <h3 class="sub-title">
-                                <span class="bg-pink">遠東百貨桃園店</span>
+                                <span class="bg-pink">新光三越桃園站前店</span>
                             </h3>
                             <div class="info">
                                 <br>
@@ -126,7 +126,7 @@
                                             <p>於<a href="https://liff.line.me/1645278921-kWRPP32q/?accountId=497jygbl" target="_blank">桃園市民卡LINE官方帳號</a>完成註冊。</p>
                                         </li>
                                         <li>
-                                            <p>11F 客服中心出示當日消費滿2,000元發票（當日累積）及市民卡LINE「註冊/登錄」頁面 即可掃描現場QRCODE 領取百貨禮券200元（限量200份，每人限兌換一份，送完為止）。</p>
+                                            <p>11F 客服中心及 10F 贈品處出示當日消費滿2,000元發票（當日累積）及市民卡LINE「註冊/登錄」頁面 即可掃描現場QRCODE 領取百貨禮券200元（限量200份，每人限兌換一份，送完為止）。</p>
                                         </li>
                                     </ul>
                                     <p class="text-remark">※ 兌換按鈕請交由工作人員進行點選，請勿自行操作，以免喪失權益。</p>
@@ -157,7 +157,7 @@
                                                     target="_blank">桃園市民卡LINE官方帳號</a>完成註冊。</p>
                                         </li>
                                         <li>
-                                            <p>11F 客服中心出示當日消費滿2,000元發票（當日累積）及市民卡LINE「註冊/登錄」頁面 即可掃描現場QRCODE 領取百貨禮券200元（限量200份，每人限兌換一份，送完為止）。</p>
+                                            <p>11F 客服中心及 10 F贈品處出示當日消費滿2,000元發票（當日累積）及市民卡LINE「註冊/登錄」頁面 即可掃描現場QRCODE 領取百貨禮券200元（限量200份，每人限兌換一份，送完為止）。</p>
                                         </li>
                                     </ul>
                                     <p class="text-remark">※ 兌換按鈕請交由工作人員進行點選，請勿自行操作，以免喪失權益。</p>
