女王節活動 - 更新首頁的標題圖片 & 補05的圖片

--- a/iiot/taoyuang1000/queen/date-05.html
+++ b/iiot/taoyuang1000/queen/date-05.html
@@ -188,11 +188,131 @@
                         </h3>
                         <div class="info">
                             <ul class="store-logo clearfix">
-                                <!-- <li>
+                                <li>
                                     <div class="img">
-                                        <img src="images/store/logo-48.png" alt="翰林茶館">
+                                        <img src="images/store/date05-logo-01.jpg" alt="植村秀">
                                     </div>
-                                </li> -->
+                                </li>
+                                <li>
+                                    <div class="img">
+                                        <img src="images/store/date05-logo-02.jpg" alt="THE BODY SHOP">
+                                    </div>
+                                </li>
+                                <li>
+                                    <div class="img">
+                                        <img src="images/store/date05-logo-03.jpg" alt="歐舒丹">
+                                    </div>
+                                </li>
+                                <li>
+                                    <div class="img">
+                                        <img src="images/store/date05-logo-04.jpg" alt="Bo Derek">
+                                    </div>
+                                </li>
+                                <li>
+                                    <div class="img">
+                                        <img src="images/store/date05-logo-05.jpg" alt="Le Chatelet">
+                                    </div>
+                                </li>
+                                <li>
+                                    <div class="img">
+                                        <img src="images/store/date05-logo-06.jpg" alt="BLAZING">
+                                    </div>
+                                </li>
+                                <li>
+                                    <div class="img">
+                                        <img src="images/store/date05-logo-07.jpg" alt="FACE">
+                                    </div>
+                                </li>
+                                <li>
+                                    <div class="img">
+                                        <img src="images/store/date05-logo-08.jpg" alt="Be;eza">
+                                    </div>
+                                </li>
+                                <li>
+                                    <div class="img">
+                                        <img src="images/store/date05-logo-09.jpg" alt="Dr.Martens">
+                                    </div>
+                                </li>
+                                <li>
+                                    <div class="img">
+                                        <img src="images/store/date05-logo-10.jpg" alt="PYXIS">
+                                    </div>
+                                </li>
+                                <li>
+                                    <div class="img">
+                                        <img src="images/store/date05-logo-11.jpg" alt="PINK">
+                                    </div>
+                                </li>
+                                <li>
+                                    <div class="img">
+                                        <img src="images/store/date05-logo-12.jpg" alt="HALF HALF">
+                                    </div>
+                                </li>
+                                <li>
+                                    <div class="img">
+                                        <img src="images/store/date05-logo-13.jpg" alt=" Doughnut">
+                                    </div>
+                                </li>
+                                <li>
+                                    <div class="img">
+                                        <img src="images/store/date05-logo-14.jpg" alt="Destiny">
+                                    </div>
+                                </li>
+                                <li>
+                                    <div class="img">
+                                        <img src="images/store/date05-logo-15.jpg" alt="TIMBERLAND">
+                                    </div>
+                                </li>
+                                <li>
+                                    <div class="img">
+                                        <img src="images/store/date05-logo-16.jpg" alt="GAUDI">
+                                    </div>
+                                </li>
+                                <li>
+                                    <div class="img">
+                                        <img src="images/store/date05-logo-17.jpg" alt="EDWIN">
+                                    </div>
+                                </li>
+                                <li>
+                                    <div class="img">
+                                        <img src="images/store/date05-logo-18.jpg" alt="GMP">
+                                    </div>
+                                </li>
+                                <li>
+                                    <div class="img">
+                                        <img src="images/store/date05-logo-19.jpg" alt="麗嬰房">
+                                    </div>
+                                </li>
+                                <li>
+                                    <div class="img">
+                                        <img src="images/store/date05-logo-20.jpg" alt="集雅社">
+                                    </div>
+                                </li>
+                                <li>
+                                    <div class="img">
+                                        <img src="images/store/date05-logo-21.jpg" alt="泉吟">
+                                    </div>
+                                </li>
+                                <li>
+                                    <div class="img">
+                                        <img src="images/store/date05-logo-22.jpg" alt="日分茶">
+                                    </div>
+                                </li> 
+                                <li>
+                                    <div class="img">
+                                        <img src="images/store/date05-logo-25.jpg" alt="咕雞咕雞">
+                                    </div>
+                                </li>
+                                <li>
+                                    <div class="img">
+                                        <img src="images/store/date05-logo-23.jpg" alt="千稻咖哩">
+                                    </div>
+                                </li>
+                                <li>
+                                    <div class="img">
+                                        <img src="images/store/date05-logo-24.jpg" alt="吃吃牛排">
+                                    </div>
+                                </li>
                             </ul>
                             <p>2022/6/30前至旗下品牌出示桃園市民卡卡片或LINE官方帳號「註冊/登錄」頁面，即享下列優惠：</p>
                             <ul class="list">
