--- a/iiot/taoyuang1000/queen/index.html
+++ b/iiot/taoyuang1000/queen/index.html
@@ -238,7 +238,7 @@
                             <div class="step-box">
                                 <ul class="clearfix">
                                     <li class="top-title">
-                                        <img src="images/step-title.png" alt="如何綁定抽滿千送百">
+                                        <img src="images/step-title-0509.png" alt="如何綁定滿千送百">
                                     </li>
                                     <li>
                                         <img src="images/step1.png" alt="掃 QRcode 加官方 line">
