女王節活動 - 更新首頁的連結 05 + 06

--- a/iiot/taoyuang1000/queen/index.html
+++ b/iiot/taoyuang1000/queen/index.html
@@ -195,16 +195,16 @@
                                 <p>遠東百貨 桃園店</p>
                             </li>
                             <li>
-                                <a class="store-photo" target="_blank">
+                                <a class="store-photo" href="date-05.html" target="_blank">
                                     <img src="images/img_store_05.png" alt="遠東SOGO百貨 中壢店">
                                 </a>
-                                <p>comming soon...</p> 
+                                <p>新光三越 桃園站前店</p> 
                             </li>
                             <li>
-                                <a class="store-photo" target="_blank">
+                                <a class="store-photo" href="date-06.html" target="_blank">
                                     <img src="images/img_store_06.png" alt="遠東SOGO百貨 中壢店">
                                 </a>
-                                <p>comming soon...</p>
+                                <p>遠東SOGO百貨 中壢店</p>
                             </li>
                         </ul>
                         <p class="text-remark">※ 營業時間及活動名額，請依各合作百貨門市公告為主。</p>
