--- a/iiot/taoyuang1000/queen/date-05.html
+++ b/iiot/taoyuang1000/queen/date-05.html
@@ -117,7 +117,7 @@
                         <table class="table-style pc-show" border="0" cellpadding="0" cellspacing="0">
                             <tr>
                                 <th width="50%">消費滿兩千兌換兩百元</th>
-                                <th>停車優惠兌換</th>
+                                <th>來店禮兌換</th>
                             </tr>
                             <tr>
                                 <td class="info">
@@ -126,7 +126,7 @@
                                             <p>於<a href="https://liff.line.me/1645278921-kWRPP32q/?accountId=497jygbl" target="_blank">桃園市民卡LINE官方帳號</a>完成註冊。</p>
                                         </li>
                                         <li>
-                                            <p>11F 客服中心及 10F 贈品處出示當日消費滿2,000元發票（當日累積）及市民卡LINE「註冊/登錄」頁面 即可掃描現場QRCODE 領取百貨禮券200元（限量200份，每人限兌換一份，送完為止）。</p>
+                                            <p>10F 贈品處出示當日消費滿2,000元發票（當日累積）及市民卡LINE「註冊/登錄」頁面 即可掃描現場 QRCODE 領取百貨禮券200元（限量200份，每人限兌換一份，送完為止）。</p>
                                         </li>
                                     </ul>
                                     <p class="text-remark">※ 兌換按鈕請交由工作人員進行點選，請勿自行操作，以免喪失權益。</p>
@@ -137,7 +137,7 @@
                                             <p>於<a href="https://liff.line.me/1645278921-kWRPP32q/?accountId=497jygbl" target="_blank">桃園市民卡LINE官方帳號</a>完成註冊。</p>
                                         </li>
                                         <li>
-                                            <p>服務台出示桃園市民卡LINE官方帳號「註冊/登錄」頁面及館內當日不限額發票，即可掃描現場 QRCODE 折抵地下停車場停車一小時（限汽車，每人限兌換一份）。</p>
+                                            <p>10F 贈品處出示桃園市民卡LINE 官方帳號「註冊/登錄」頁面及新光三越 APP 會員（或貴賓卡），即可掃描現場 QRCODE 兌換精美口罩套組1份（限量50份，每人限兌換一份，送完為止）。</p>
                                         </li>
                                     </ul>
                                     <p class="text-remark">※ 兌換按鈕請交由工作人員進行點選，請勿自行操作，以免喪失權益。</p>
@@ -157,14 +157,14 @@
                                                     target="_blank">桃園市民卡LINE官方帳號</a>完成註冊。</p>
                                         </li>
                                         <li>
-                                            <p>11F 客服中心及 10 F贈品處出示當日消費滿2,000元發票（當日累積）及市民卡LINE「註冊/登錄」頁面 即可掃描現場QRCODE 領取百貨禮券200元（限量200份，每人限兌換一份，送完為止）。</p>
+                                            <p>10 F贈品處出示當日消費滿2,000元發票（當日累積）及市民卡LINE「註冊/登錄」頁面 即可掃描現場 QRCODE 領取百貨禮券200元（限量200份，每人限兌換一份，送完為止）。</p>
                                         </li>
                                     </ul>
                                     <p class="text-remark">※ 兌換按鈕請交由工作人員進行點選，請勿自行操作，以免喪失權益。</p>
                                 </td>
                             </tr>
                             <tr>
-                                <th>停車優惠</th>
+                                <th>來店禮優惠</th>
                             </tr>
                             <tr>
                                 <td class="info">
@@ -174,7 +174,7 @@
                                                     target="_blank">桃園市民卡LINE官方帳號</a>完成註冊。</p>
                                         </li>
                                         <li>
-                                            <p>服務台出示桃園市民卡LINE官方帳號「註冊/登錄」頁面及館內當日不限額發票，即可掃描現場 QRCODE 折抵地下停車場停車一小時（限汽車，每人限兌換一份）。</p>
+                                            <p>10F 贈品處出示桃園市民卡LINE 官方帳號「註冊/登錄」頁面及新光三越 APP 會員（或貴賓卡），即可掃描現場 QRCODE 兌換精美口罩套組1份（限量50份，每人限兌換一份，送完為止）。</p>
                                         </li>
                                     </ul>
                                     <p class="text-remark">※ 兌換按鈕請交由工作人員進行點選，請勿自行操作，以免喪失權益。</p>
