--- a/jetfi_wifi_jp/index.html
+++ b/jetfi_wifi_jp/index.html
@@ -10,8 +10,9 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="stylesheet" href="css/wifi-style.css">
 		<script type="text/javascript" src="https://code.jquery.com/jquery-3.3.1.js"></script>
-		<link rel="icon" href="https://www.jetfi.jp/template/default/img/common/favicon-32x32.png">
-		<link rel="apple-touch-icon" href="https://www.jetfi.jp/wifi/images/apple-touch-icon.png">
+		<link rel="icon" href="/wifi/images/favicon.svg">
+		<link rel="icon" href="images/favicon.png">
+		<link rel="apple-touch-icon" href="images/apple-touch-icon.png">
 		<link href="https://fonts.googleapis.com/css?family=Noto+Sans+JP:300,400,500,700,900" rel="stylesheet">
 		<link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:400,700,700i" rel="stylesheet">
 	</head>
@@ -19,9 +20,7 @@
 		<!--header-->   
 		<header class="header_container">
 		    <div class="logo-area clearfix">
-		      	<a href="#" class="gnav-logo">
-			      	<img src="https://www.jetfi.jp/wifi/images/logo_jetfisite.svg" alt="高速、大容量、これ一台で！全世界で使える海外Wi-Fi jetfi by GFC">
-			    </a>
+			    <a href="https://www.jetfi.jp/wifi/" class="gnav-logo"><img src="images/logo_h_bk.svg" alt="高速、大容量、これ一台で！全世界で使える海外Wi-Fi jetfi by GFC"></a>
 		        <p class="tagline">高速、大容量、これ一台で！<br>全世界で使える海外Wi-Fi</p>
 		    </div>
 		</header>
