--- a/iiot/taoyuang1000/queen/date-05.html
+++ b/iiot/taoyuang1000/queen/date-05.html
@@ -88,15 +88,13 @@
                 <section class="content">
                     <div class="main-title clearfix">
                         <div class="i-a">
-                            <a href="/app/register">
-                                <img src="images/main-banner-0414.png" title="桃園市民卡－卡好女王節" width="100%">
-                            </a>
+                            <img src="images/main-banner-0606.png" title="桃園市民卡－卡好女王節" width="100%">
                         </div>
-                        <div class="i-c">
+                        <!-- <div class="i-c">
                             <a href="https://bit.ly/3JRm0ae">
                                 <img src="images/main-banner-3.png" title="滿兩千送兩百 再送來店禮" width="100%">
                             </a>
-                        </div>
+                        </div> -->
                     </div>
                 </section>
                 <section class="event-content" id="goThe01">
