CRM網頁調整 - 委刊單新增/修改
1.委刊單列表 - 新增"預覽"
2.產品新增備註
3.新增媒體備註
4.產品/專案 選單 fixed 高度
5.專案新增數量欄位
6.show出媒體條款
7.專案欄位調整(名稱+描述+銷售期限)
8.產品欄位調整(種類+名稱+描述+服務費)
9.購買清單中-新增刪除按鈕

--- a/CRM/product.html
+++ b/CRM/product.html
@@ -1186,26 +1186,36 @@
                                 </div>
                             </fieldset>
                         </div>
-                        <div class="confirm clearfix">
+                        <div class="confirm field-three clearfix">
                             <div class="option-list">
                                 <input id="" type="checkbox" name="" value="">
-                                <label for="option">威旭質感廣告影片 1支 (15~60秒，含腳本、拍攝、剪輯)</label>
+                                <!-- 專案名稱-->
+                                <label class="name" for="option">威旭質感廣告影片 1支</label>
+                                <!-- 專案描述 -->
+                                <p class="description">15~60秒，含腳本、拍攝、剪輯</p>
+                                <!-- 銷售日期 -->
+                                <p class="day">2022/05/02 - 2022/12/30</p>
                             </div>
                             <div class="option-list">
                                 <input id="" type="checkbox" name="" value="" checked>
-                                <label for="option">威旭炫光短影音-直+橫 1組 (15秒，含腳本、一次拍攝、剪輯)</label>
+                                <label class="name" for="option">威旭炫光短影音-直+橫 1組</label>
+                                <p class="description">15秒，含腳本、一次拍攝、剪輯</p>
+                                <p class="day">永久刊登</p>
                             </div>
                             <div class="option-list">
-                                <input id="" type="checkbox" name="" value="條款內容條款內容條款內容條款內容條款內容條款內容條款內容條款內容條款內容">
-                                <label
-                                    for="option">社區電梯螢幕看板廣告 200面 (含素材設計1款)</label>
+                                <input id="" type="checkbox" name="" value="">
+                                <label class="name" for="option">小額購一波-3選1</label>
+                                <p class="description">專案優惠價$18,000</p>
+                                <p class="day">永久刊登</p>
                             </div>
                             <div class="option-list">
-                                <input id="" type="checkbox" name="" value="條款文字捷徑">
-                                <label for="option">業配口碑行銷 3篇/月 (日流量3,000以上部落客、粉絲人數5,000以上IG網紅)</label>
+                                <input id="" type="checkbox" name="" value="">
+                                <label class="name" for="option">專案名稱這裡出現業配口碑行銷 3篇/月</label>
+                                <p class="description">日流量3,000以上部落客、粉絲人數5,000以上IG網紅</p>
+                                <p class="day">2023/01/01 - 2024/01/30</p>
                             </div>
-                            <p class="text-add"><a class="" href="#">新增專案</a></p>
                         </div>
+                        <p class="text-add"><a class="" href="#">新增專案</a></p>
                     </div>
                 </form>
             </div>
