--- a/CRM/project.html
+++ b/CRM/project.html
@@ -1111,25 +1111,59 @@
                                 </div>
                             </fieldset>
                         </div>
-                        <div class="confirm clearfix">
-                            <div class="option-list">
+                        <div class="confirm field-four clearfix">
+                            <div class="option-list clearfix">
                                 <input id="" type="checkbox" name="" value="">
-                                <label for="option">產品名稱 (15~60秒，含腳本、拍攝、剪輯)</label>
+                                <label class="media" for="option">Yahoo</label>
+                                <p class="name">關鍵字廣告</p>
+                                <!-- 產品規格描述 -->
+                                <p class="description">譬如：15~60秒影片拍攝 含腳本、拍攝、剪輯等等</p>
+                                <p class="fee">5%</p>
                             </div>
-                            <div class="option-list">
+                            <div class="option-list clearfix">
+                                <input id="" type="checkbox" name="" value="">
+                                <label class="media" for="option">Google</label>
+                                <p class="name">原生廣告</p>
+                                <p class="description">威旭炫光短影音-直+橫 1組 (15秒，含腳本、一次拍攝、剪輯) 威旭炫光短影音-直+橫 1組 (15秒，含腳本、一次拍攝、剪輯)</p>
+                                <p class="fee">3%</p>
+                            </div>
+                            <div class="option-list clearfix">
                                 <input id="" type="checkbox" name="" value="" checked>
-                                <label for="option">威旭炫光短影音-直+橫 1組 (15秒，含腳本、一次拍攝、剪輯)</label>
+                                <label class="media" for="option">Google</label>
+                                <p class="name">素人口碑</p>
+                                <p class="description">威旭BN製作*2</p>
+                                <p class="fee">10%</p>
                             </div>
-                            <div class="option-list">
+                            <div class="option-list clearfix">
                                 <input id="" type="checkbox" name="" value="">
-                                <label for="option">社區電梯螢幕看板廣告 200面 (含素材設計1款)</label>
+                                <label class="media" for="option">Google</label>
+                                <p class="name">聯播網</p>
+                                <p class="description">社區電梯螢幕看板廣告 200面 (含素材設計1款)</p>
+                                <p class="fee">5%</p>
                             </div>
-                            <div class="option-list">
-                                <input id="" type="checkbox" name="" value="條款文字捷徑">
-                                <label for="option">社區電梯螢幕看板廣告 200面 (含素材設計1款)</label>
+                            <div class="option-list clearfix">
+                                <input id="" type="checkbox" name="" value="">
+                                <label class="media" for="option">Google</label>
+                                <p class="name">威旭質感影片</p>
+                                <p class="description">15~60秒影片拍攝 含腳本、拍攝、剪輯等等</p>
+                                <p class="fee">5%</p>
                             </div>
-                            <p class="text-add"><a class="" href="#">新增產品</a></p>
+                            <div class="option-list clearfix">
+                                <input id="" type="checkbox" name="" value="">
+                                <label class="media" for="option">其他</label>
+                                <p class="name">威旭質感影片</p>
+                                <p class="description">社區電梯螢幕看板廣告 200面 (含素材設計1款)</p>
+                                <p class="fee"></p>
+                            </div>
+                            <div class="option-list clearfix">
+                                <input id="" type="checkbox" name="" value="">
+                                <label class="media" for="option">其他</label>
+                                <p class="name">素人口碑</p>
+                                <p class="description">社區電梯螢幕看板廣告 200面 (含素材設計1款)</p>
+                                <p class="fee">1500</p>
+                            </div>
                         </div>
+                        <p class="text-add"><a class="" href="#">新增產品</a></p>
                     </div>
                 </form>
             </div>
