--- a/CRM/authority-order.html
+++ b/CRM/authority-order.html
@@ -123,7 +123,7 @@
             </ul>
         </nav>
         <main class="main-container">
-            <section class="content">
+            <section class="content clearfix">
                 <h3 class="main-title">委刊單權限</h3>
                 <div class="tools-bar clearfix">
                     <div class="search-box">
