委刊單(建置修改) - 新增"優惠專案備註"

--- a/CRM/order.html
+++ b/CRM/order.html
@@ -846,7 +846,7 @@
                             </fieldset>
                         </div>
                     </div>
-                    <div class="field no-line clearfix">
+                    <div class="field clearfix">
                         <div class="left-sub-title">
                             <p>委刊媒體</p>
                         </div>
@@ -1121,6 +1121,12 @@
                                         <p>金額小計</p>
                                         <p class="total">-</p>
                                     </div>
+                                </div>
+                            </fieldset>
+                            <fieldset>
+                                <label class="item-title">優惠專案備註</label>
+                                <div class="confirm clearfix">
+                                    <textarea class="width100" placeholder="填寫備註"></textarea>
                                 </div>
                             </fieldset>
                         </div>
@@ -1413,7 +1419,7 @@
                             </fieldset>
                         </div>
                     </div>
-                    <div class="field no-line clearfix">
+                    <div class="field clearfix">
                         <div class="left-sub-title">
                             <p>委刊媒體</p>
                         </div>
@@ -1573,6 +1579,12 @@
                                         <p class="total">-</p>
                                     </div>
                                 </div>
+                            </fieldset>
+                            <fieldset>
+                                <label class="item-title">優惠專案備註</label>
+                                <p class="input-value">
+                                    優惠專案的備註說明欄位在此，有什麼想要備註的就在這裡說吧吧吧吧~
+                                </p>
                             </fieldset>
                         </div>
                     </div>
